tests/check_output/snapshots/examples__check_output__main@blueprint.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:
~ ~ ~ heating ~ ~ ~
=> => pumping => =>
 [_]P coffee! [_]P 


Stderr:
Finished compiling target(s)
     Running `examples/blueprint`
