tests/check_output/snapshots/examples__check_output__main@car_blueprint.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
Finished compiling target(s)
     Running `examples/blueprint`
