tests/check_output/snapshots/examples__check_output__main@component_order_of_bindings.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:
~ ~ ~ heating ~ ~ ~
=> => pumping => =>
 [_]P coffee! [_]P 


Stderr:
Finished compiling target(s)
     Running `examples/component_order_of_bindings`
